# healthcare

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
source/res/: MainWindow.qrc
source/task/: Task.cpp  Task.h  WorkTimeWatchTask.cpp  WorkTimeWatchTask.h
source/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MainpageWidget.cpp  MainpageWidget.h  MainpageWidget.ui  SettingWidget.cpp  SettingWidget.ui  settingWidget.h
